# aion-trading-system

./: .env.example  .gitignore  pyproject.toml
aion/: __init__.py
aion/analytics/: __init__.py  base.py  baseline_selection.py  parameter_sweeps.py  replay_metrics.py  replay_models.py  replay_reports.py  strategy_comparison.py
aion/api/: __init__.py  main.py
aion/app/: __init__.py  loop.py  orchestrator.py  summary.py
aion/config/: execution_config.yaml
aion/core/: __init__.py  config.py  constants.py  enums.py  ids.py  models.py
aion/data/: __init__.py  csv_adapter.py  csv_loader.py  features.py  mt5_adapter.py  normalizer.py  persistence.py  pipeline.py  resampler.py  schema.py  sessions.py  snapshots.py  validator.py
aion/execution/: __init__.py  base.py  execution_model.py  journal.py  models.py  paper.py  state.py
aion/regime/: __init__.py  base.py  rules.py
aion/replay/: __init__.py  journal.py  labeler.py  models.py  runner.py
aion/risk/: __init__.py  (+4 more)
docs/: module_01_market_engine.md
research/: generate_sequential_strategy_candidates.py  generate_strategy_candidates.py  run_meta_strategy.py  run_pattern_discovery.py  run_sequential_discovery.py  run_us100_pattern_discovery.py
scripts/: inspect_parquet.py  run_compare_strategies.py  run_or_parameter_sweep.py  run_paper_execution_demo.py  run_paper_trading_loop.py  run_parameter_sweep.py  run_pipeline_sample.py  run_replay_analysis.py  run_risk_allocation_demo.py  run_strategy_comparison.py  run_strategy_replay.py  run_us100_comparison.py  run_us100_replay.py  run_vwap_parameter_sweep.py
(+93 files in other folders)
