[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aion"
version = "0.1.0"
description = "AION — Trading AI Platform"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # Timezone (required on Windows; optional on Linux/Mac but safe to include)
    "tzdata>=2024.1",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
mt5 = [
    "MetaTrader5>=5.0.4500",
]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "shap>=0.45",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
include = ["aion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
